List of chats preview
1- Landing Screen renamed to Landing Activty
2- Activity_landing_screen renamed to Activity_Landing
3- Added a bunch of chat tests in LandingActivity
4- Util renamed to Lib
5- Lib structured
6- Added Chat and ChatsAdapter
7- Added a layout representing the chat card
8- Added some colors and strings in resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Hanasu</string>
     <string name="landing_title">Chats</string>
+    <string name="user_icon">An user icon</string>
 </resources>
