--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     <string name="user_icon">User icon</string>
     <string name="landing_title">Chats</string>
     <string name="loading_message">from Abstrack &amp; CBTIS 051</string>
+    <string name="login_msg">¡Hola! Que gusto tenerte de vuelta.</string>
+    <string name="password_txt">Introduce tu contraseña</string>
+    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
+    <string name="login_btn">Inicio de sesión</string>
+    <string name="new_member">¿No tienes cuenta?</string>
+    <string name="register_2">Registrarse</string>
 </resources>
