--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="logo">Logo</string>
     <string name="user_icon">User icon</string>
     <string name="landing_title">Chats</string>
+    <string name="story_icon_description">Story icon</string>
 </resources>
