--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="landing_title">Chats</string>
     <string name="story_icon_description">Story icon</string>
     <string name="add_chat_icon">Add chat icon</string>
+    <string name="add_group_icon">Add group icon</string>
+    <string name="search_icon">Search icon</string>
+    <string name="plus_icon">Show less options icon</string>
     <string name="loading_message">from Abstrack &amp; CBTIS 051</string>
     <string name="login_msg">¡Hola! Que gusto tenerte de vuelta.</string>
     <string name="password_txt">Introduce tu contraseña</string>
