--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,10 +40,13 @@
     <string name="restore_pswd">Restablecimiento de contraseña</string>
     <string name="restore_instruction">Hemos enviado un enlace para el restablecimiento de su contraseña al correo:</string>
     <string name="restore_instruction2">Debe entrara al enlace para restablecer su contraseña.</string>
-    <string name="username_title">Nombre de usuario</string>
     <string name="username_instruction">¡Ingresa el nombre con el que podrán contactarte otros usuarios!</string>
+    <string name="add_chat">Añadir un amigo</string>
+    <string name="add_chat_instruction">Ingresa el identificador de la persona que quieres agregar 🌱</string>
     <string name="username_hashtag">#</string>
     <string name="username_hint">Usuario</string>
     <string name="username_tag_hint">Tag</string>
     <string name="username_btn">Aceptar</string>
+    <string name="add_chat_btn">Agregar</string>
+    <string name="username_title">Nombre de usuario</string>
 </resources>
