--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="user_icon">User icon</string>
     <string name="landing_title">Chats</string>
     <string name="story_icon_description">Story icon</string>
-    <string name="add_chat_icon">Add chat icon</string>
+
     <string name="loading_message">from Abstrack &amp; CBTIS 051</string>
     <string name="login_msg">¡Hola! Que gusto tenerte de vuelta.</string>
     <string name="password_txt">Introduce tu contraseña</string>
@@ -47,6 +47,10 @@
     <string name="username_hint">Usuario</string>
     <string name="username_tag_hint">Tag</string>
     <string name="username_btn">Aceptar</string>
-    <string name="add_chat_btn">Agregar</string>
+    <string name="add_friend_btn">Agregar</string>
+    <string name="add_friend_icon">Add chat icon</string>
     <string name="username_title">Nombre de usuario</string>
+    <string name="search_icon">Search icon</string>
+    <string name="plus_icon">Show more options icon</string>
+    <string name="add_group_icon">Add groups icon</string>
 </resources>
