Major refactor and Welcome Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="profile_info_title">Información del perfil</string>
     <string name="profile_info_instruction">Por favor, ingresa un nombre y foto de perfil.</string>
     <string name="profile_info_name_hint">Escribe tu nombre aquí</string>
-    <string name="profile_info_btn">Continuar</string>
+    <string name="profile_info_btn">Aceptar y Continuar</string>
     <string name="welcome_title">¡Bienvenido a Hanasu!</string>
     <string name="welcome_terms">Lee nuestras</string>
     <string name="welcome_terms_2"><u>políticas de privacidad.</u></string>
