--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="profile_pic_gallery">Galería</string>
     <string name="profile_pic_trash">Basura</string>
     <string name="msg_hint">Mensaje</string>
+    <string name="no_chats_text_view">No tienes ningún chat aún, añade un contacto</string>
 </resources>
